<resources>
    <string name="app_name">Random Choices</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="who_knows">\?</string>
    <string name="a_fruit">a_fruit</string>
    <string name="fruit">fruit</string>
    <string name="veg">veg</string>
    <string name="response_text_string">response_text_string</string>
    <string name="acknowledge_button_text">OK</string>
    <string name="lunch">lunch</string>
    <string name="preference_file_key">com.example.randomchoices.PREFERENCE_FILE_KEY</string>
    <string name="settings_string">...</string>
    <string name="save_button_string">save</string>
    <string name="add_category_button_string">+</string>
    <string name="thing_added_confirmation">+</string>
    <string name="delete_button_string">delete category</string>
    <string name="another_button_string">+</string>
</resources>
