<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity"
    android:theme="@style/AppTheme.NoActionBar">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:visibility="gone"
        android:text="@string/who_knows"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />



    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:id="@+id/response_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/response_text"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/response_text_string"
                android:textColor="#33b5e5"
                android:textSize="50sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/acknowledge_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/black_overlay"
                android:text="@string/acknowledge_button_text" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/a_fruit"
                android:src="@drawable/im_5000"
                android:visibility="gone" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        android:id="@+id/category_choice_frame">
        <LinearLayout
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent"
            android:id="@+id/category_choice_linear_layout">

            <Button
                android:id="@+id/add_category_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/add_category_button_string"/>

        </LinearLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        android:id="@+id/options_frame">
        <LinearLayout
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/add_option_text_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"/>
            <Button
                android:id="@+id/save_options_button"
                style="?metaButtonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/save_button_string"/>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        android:id="@+id/category_options_frame">
        <LinearLayout
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/add_category_text_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"/>
            <Button
                android:id="@+id/save_categories_button"
                style="?metaButtonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/save_button_string"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>